k8-project-2/app-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-deployment
  namespace: production
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      # Pod başlamadan önce çalışacak init container bloğu
      containers:
      
        - name: web-api
          image: python:3.11-slim
          command: ["sh", "-c", "echo 'API ayakta' && sleep 3600"]
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "production"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: environment
                    operator: In
                    values:
                      - production
