k8-project-2/app-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-deployment
  namespace: staging
  labels:
    app: web
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        
    spec:
      # Pod başlamadan önce çalışacak init container bloğu
      containers:
      
        - name: web
          image: python:3.11-slim
          command: ["sh", "-c", "echo 'API ayakta' && sleep 3600"]
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
